--- a/react-profile/src/components/About/About.module.css
+++ b/react-profile/src/components/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  background-color: rgba(12, 12, 12, 0.6);
+  background-color: rgb(214, 141, 153);
   border-radius: 15px;
   padding: 73px;
   margin-top: 129px;
@@ -45,7 +45,7 @@
   padding: 25px;
   background-image: linear-gradient(
     90deg,
-    rgba(165, 215, 232, 0.42) 0%,
+    rgba(255, 236, 247, 0.42) 0%,
     rgba(255, 255, 255, 0) 100%
   );
   background-size: 0 100%;
