--- a/react-profile/src/components/Contact/Contact.module.css
+++ b/react-profile/src/components/Contact/Contact.module.css
@@ -3,7 +3,7 @@
 .container{
     color: var(--color-text);
     margin-top: 120px;
-    background-color: var(--color-secondary);
+    background-color: rgb(214, 141, 153);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
