--- a/react-profile/src/components/Hero/Hero.module.css
+++ b/react-profile/src/components/Hero/Hero.module.css
@@ -41,7 +41,7 @@
 
 .contactBtn {
   text-decoration: none;
-  background-color: var(--color-primary);
+  background-color: #ffb9c4;
   color: var(--color-text);
   border-radius: 100px;
   font-size: 30px;
@@ -81,7 +81,7 @@
   top: -128px;
   left: -10vw;
   border-radius: 764px;
-  background: rgba(25, 55, 109, 0.7);
+  background: 	#ffcdd8;
   filter: blur(100px);
   z-index: 0;
 }
@@ -95,7 +95,7 @@
   top: 246px;
   right: -25vw;
   border-radius: 764px;
-  background: rgba(25, 55, 109, 0.7);
+  background: 	#ffcdd8;
   filter: blur(100px);
   z-index: 0;
 }
