--- a/react-profile/src/components/Projects/ProjectCard.module.css
+++ b/react-profile/src/components/Projects/ProjectCard.module.css
@@ -4,8 +4,12 @@
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
-    box-shadow: 0 16px 14px 0 #04152d;
+    background: linear-gradient(
+        90deg,
+        rgba(255, 215, 234, 0.42) 0%,
+        rgb(214, 141, 153) 100%
+      );
+    box-shadow: 0 12px 12px 0 #490f3d;
     padding: 18px 24px;
     max-width: 345px;
 }
