--- a/profile/src/components/Me/Me.module.css
+++ b/profile/src/components/Me/Me.module.css
@@ -64,6 +64,7 @@
   font-family: var(--font-roboto);
   font-weight: 500;
   text-align: center;
+  color: #fff;
 }
 
 @media screen and (max-width: 830px) {
